--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "bin/main.exe",
+            "program": "./bin/pixiple.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
