--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "cl.exe",
+            "label": "compile",
             "type": "shell",
             "command": "cl.exe",
             "args": [
@@ -23,6 +23,7 @@
             "group": {
               "kind": "build",
               "isDefault": true
-          },
+            }
         }
+    ]
 }
